list tables were a bit too wide... fixing {bz: 1289}
git-svn-id: https://repo.socialtext.net:8999/svn/socialtext/trunk@10097 593ce9bc-2028-0410-bb98-c566b643a948

--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -83,6 +83,9 @@ table.dataTable td img.avatar {
     margin: 5px;
     vertical-align: middle;
 }
+table.dataTable {
+    width:98%;
+}
 div#bottomButtons {
     width: 100%;
 }
